[package]
name = "image-tool"
version = "0.1.0"
authors = ["apple <tynr426@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.3"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
json = "0.12.0"
imageproc = "0.19.2"
rusttype = "0.8.2"